ユーザー登録機能を追加

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,11 @@
   background-color: #fff;
 }
 
+/*color*/
+.color-dpink {
+    color: deeppink;
+}
+
 /* チャットレイアウト */
 .chat-box {
     width: 100%;
